bug 472326 - html:input of type file no longer rendered to screen readers, effective December 30, 2008, r=aaronlev, r=surkov